--- a/style.css
+++ b/style.css
@@ -2,3 +2,12 @@ h1 {
     background-color: red;
     color: white;
 }
+nav li{
+    list-style: none;
+    display: inline;
+    margin:100px 50px 25px 10px;
+}
+nav li a{
+    text-decoration: none;
+
+}
