--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ nav li{
     display: inline;
     margin:100px 50px 25px 10px;
 }
+nav li:hover{
+    background-color: gray;
+}
 nav li a{
     text-decoration: none;
 
