footer section is added and centered to middle

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,3 +14,11 @@ nav li a{
     text-decoration: none;
 
 }
+p {
+    text-align: justify;
+    background-color: lightgray;
+}
+
+footer p{
+    text-align: center;
+}
